--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://db:3306/spring_boot_mysql
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.name=SpringBootMysqlDataSource
-spring.datasource.type=com.zaxxer.hikari.util.DriverDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.pool-name=SpringBootMysqlPool
